--- a/web/src/components/input-inline/input.module.css
+++ b/web/src/components/input-inline/input.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+.wrapperFocused, .wrapper {
   position: relative;
   border: 2px solid transparent;
   border-radius: 3px;
@@ -12,7 +12,7 @@
   box-sizing: border-box;
 }
 
-.wrapper:focus-within {
+.wrapperFocused {
   border-color: var(--primary);
   background-color: #FFFFFF;
 }
