Implemented ContextMenu component and added archive list feature

--- a/web/src/assets/css/theme.css
+++ b/web/src/assets/css/theme.css
@@ -2,6 +2,7 @@
   --primary: #026AA7;
   --secondary: #FFFFFF;
   --deep-blue: #172b4d;
+  --col-neutral: #091e4221;
 
   --button-primary: #026AA7;
   --button-primary-hovered: #025a8d;
