--- a/web/src/components/input-inline/input.module.css
+++ b/web/src/components/input-inline/input.module.css
@@ -35,6 +35,7 @@
   padding: inherit;
   resize: none;
   cursor: pointer;
+  width: calc(100% - 1.6rem);
 }
 
 .textarea {
@@ -44,7 +45,7 @@
   box-shadow: var(--ds-shadow-raised, 0 1px 0 #091e4240);
   color: var(--ds-text, inherit);
   padding: 0.6rem 0.8rem;
-  width: 97%;
+  width: calc(100% - 1.6rem);
   cursor: pointer;
   display: block;
   resize: none;
