--- a/web/src/components/section/Section.css
+++ b/web/src/components/section/Section.css
@@ -37,6 +37,7 @@
   padding: 0.4rem 0;
   flex-grow: 1;
   margin-right: 0.4rem;
+  max-width: calc(100% - 3.2rem);
 }
 
 .section-wrapper > .section > .body {
