--- a/web/src/components/board/components/list/BoardList.css
+++ b/web/src/components/board/components/list/BoardList.css
@@ -3,6 +3,10 @@
   margin: 0 10%;
 }
 
+.board-list > .title {
+  text-align: center;
+}
+
 .board-list > .content {
   display: flex;
   align-items: center;
